force-app/main/default/objects/Flat__c/fields/Building_Owner__c.field-meta.xml
<CustomField>
    <fullName>Building_Owner__c</fullName>
    <formula>Building__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Owner</label>
    <type>Text</type>
</CustomField>