force-app/main/default/objects/Flat__c/fields/Building_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Building_Owner_Phone__c</fullName>
    <formula>Building__r.Contact_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Owner Phone</label>
    <type>Text</type>
</CustomField>