force-app/main/default/objects/Flat__c/fields/Flat_Number__c.field-meta.xml
<CustomField>
    <fullName>Flat_Number__c</fullName>
    <displayFormat>FLAT-{000000}</displayFormat>
    <label>Flat Number</label>
    <type>AutoNumber</type>
</CustomField>