force-app/main/default/objects/Flat__c/fields/Flat_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Flat_Owner_Email__c</fullName>
    <label>Flat Owner Email</label>
    <type>Email</type>
</CustomField>