force-app/main/default/objects/Flat__c/fields/Flat_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Flat_Owner_Name__c</fullName>
    <label>Flat Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>