force-app/main/default/objects/Flat__c/fields/Flat_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Flat_Owner_Phone__c</fullName>
    <label>Flat Owner Phone</label>
    <type>Phone</type>
</CustomField>