force-app/main/default/objects/Flat__c/fields/Rooms_Booked__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Booked__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rooms Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>