force-app/main/default/objects/Flat__c/fields/Rooms_per_Floor__c.field-meta.xml
<CustomField>
    <fullName>Rooms_per_Floor__c</fullName>
    <label>Rooms per Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>