force-app/main/default/objects/Flat__c/fields/Rooms_Unbooked__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Unbooked__c</fullName>
    <formula>Total_Rooms__c  -  Rooms_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rooms Unbooked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>