force-app/main/default/objects/Flat__c/fields/Total_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_Rooms__c</fullName>
    <formula>Number_of_Stories__c  *  Rooms_per_Floor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>