force-app/main/default/objects/Flat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Building__c</columns>
    <columns>Flat_Number__c</columns>
    <columns>NAME</columns>
    <columns>Total_Rooms__c</columns>
    <columns>Rooms_Booked__c</columns>
    <columns>Rooms_Unbooked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>